// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`escape character 1`] = `
{
  "code": "'    '
\\"    \\"
\\"       \\"
\\"        \\"
\\"    \\"
\\"               \\"
'               '
'     '
'       '
'         '
\\"     \\"
\\"       \\"
\\"         \\"",
  "mode": "acorn",
}
`;

exports[`regexp affect 1`] = `
{
  "code": "[
  /'/,
  ' ',
  /\\"/,
  \\" \\"
]",
  "mode": "acorn",
}
`;

exports[`strings comment nested 1`] = `
{
  "code": "                    
const a = \\"    \\"
                    ",
  "mode": "acorn",
}
`;

exports[`strings comment nested 2`] = `
{
  "code": "                    
const a = \\"    \\"
                    ",
  "mode": "acorn",
}
`;

exports[`strings comment nested 3`] = `
{
  "code": "                    
const a = \\"    \\"
                    ",
  "mode": "acorn",
}
`;

exports[`strings comment nested 4`] = `
{
  "code": "const a = \\"    \\"
console.log(\\"       \\")",
  "mode": "acorn",
}
`;

exports[`strings comment nested 5`] = `
{
  "code": "const a = \\"    \\"
console.log(\\"       \\")
const b = \\"    \\"",
  "mode": "acorn",
}
`;

exports[`strings comment nested 6`] = `
{
  "code": "const a = \\"    \\"
console.log(\\"       \\")
const b = \\"    \\"",
  "mode": "acorn",
}
`;

exports[`strings comment nested 7`] = `
{
  "code": "const a = \\"    \\"
console.log(\\"       \\")
const b = \\"    \\"",
  "mode": "acorn",
}
`;

exports[`works 1`] = `
{
  "code": "           
const a = '    '
              
const b = \\"    \\"
  
             
  
                 
                            
const c = \`   \${a}\`

let d = /re\\\\\\\\ge/g",
  "mode": "acorn",
}
`;
